--- a/pages/index/index.scss
+++ b/pages/index/index.scss
@@ -1,3 +1,294 @@
+@import '../../var.scss';
+
 page {
   background: #fff;
+}
+
+.main {
+  position: relative;
+  width: 100%;
+  height: 1068rpx;
+  background-image: url($index__main__bg);
+  background-size: cover;
+
+  &__today {
+    position: absolute;
+    top: 280rpx;
+    left: 230rpx;
+    z-index: 1;
+    width: 290rpx;
+    height: 285rpx;
+    background-image: url($index__main__today);
+    background-size: cover;
+    color: #fff;
+
+    &__step {
+      width: 100%;
+      margin: 70rpx 0 0 0;
+      text-align: center;
+      font-size: 80rpx;
+      font-weight: bold;
+    }
+
+    &__text {
+      width: 100%;
+      text-align: center;
+      font-size: 29rpx;
+    }
+  }
+
+  &__exchange {
+    position: absolute;
+    top: 600rpx;
+    left: 228rpx;
+    z-index: 1;
+    width: 294rpx;
+    height: 90rpx;
+  }
+
+  &__function1 {
+    position: absolute;
+    bottom: 120rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200rpx;
+    color: #fff;
+
+    image {
+      width: 132rpx;
+      height: 132rpx;
+      border-radius: 50%;
+    }
+
+    &__text {
+      margin: 36rpx 0 0 0;
+      font-size: 30rpx;
+      font-weight: 500;
+    }
+  }
+
+  &__function {
+    position: absolute;
+    bottom: 80rpx;
+    left: 125rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 500rpx;
+    color: #fff;
+
+    image {
+      width: 132rpx;
+      height: 132rpx;
+      border-radius: 50%;
+    }
+
+    &__text {
+      margin: 36rpx 0 0 0;
+      font-size: 30rpx;
+      font-weight: 500;
+    }
+  }
+
+  &__user {
+    position: absolute;
+    top: 180rpx;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 260rpx;
+    height: 86rpx;
+    background: #128ecb;
+    border-radius: 0 43rpx 43rpx 0;
+
+    &__avater {
+      width: 72rpx;
+      height: 72rpx;
+      border-radius: 50%;
+    }
+
+    &__point {
+      font-size: 29rpx;
+      font-weight: 500;
+      color: #fff;
+    }
+
+    &__text {
+      font-size: 21rpx;
+      color: #90D1FF;
+    }
+  }
+
+  &__notify {
+    position: absolute;
+    top: 110rpx;
+    left: 25rpx;
+    display: flex;
+    align-items: center;
+    width: 700rpx;
+    height: 46rpx;
+    padding: 0 15rpx;
+    background: #eb01014d;
+    border-radius: 14rpx;
+
+    &__icon {
+      width: 28rpx;
+      height: 28rpx;
+    }
+
+    &__text {
+      margin: 0 0 0 15rpx;
+      font-size: 23rpx;
+      color: #fff;
+      opacity: 0.77;
+    }
+  }
+
+  &__track02 {
+    position: absolute;
+    top: 330rpx;
+    left: 120rpx;
+
+    &__img {
+      width: 90rpx;
+      height: 90rpx;
+    }
+
+    &__text {
+      margin: 12rpx 0 0 0;
+      text-align: center;
+      font-size: 25rpx;
+      color: #fff;
+    }
+  }
+
+  &__track01 {
+    position: absolute;
+    top: 510rpx;
+    right: 42rpx;
+
+    &__img {
+      width: 118rpx;
+      height: 118rpx;
+    }
+
+    &__text {
+      margin: 12rpx 0 0 0;
+      text-align: center;
+      font-size: 25rpx;
+      color: #fff;
+    }
+  }
+
+  &__bubble01 {
+    position: absolute;
+    top: 300rpx;
+    right: 117rpx;
+    width: 90rpx;
+    height: 90rpx;
+    background-image: url($index_bubble);
+    background-size: cover;
+    font-size: 25rpx;
+    color: #fff;
+  }
+
+  &__bubble02 {
+    position: absolute;
+    top: 530rpx;
+    left: 67rpx;
+    width: 90rpx;
+    height: 90rpx;
+    background-image: url($index_bubble);
+    background-size: cover;
+    font-size: 25rpx;
+    color: #fff;
+  }
+}
+
+.barrage {
+  width: 100%;
+  height: 164rpx;
+  position: absolute;
+  box-sizing: border-box;
+}
+
+.line {
+  width: 100%;
+  height: 42rpx;
+  background: #F8F8F8;
+  margin: 164rpx 0 0 0;
+}
+
+.goods {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  padding: 30rpx 20rpx;
+
+  &__wrap {
+    width: 340rpx;
+    height: 590rpx;
+    margin: 0 0 20rpx 0;
+    border-radius: 14rpx;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 2rpx 4rpx 4rpx rgba(0, 0, 0, 0.1), -2rpx 4rpx 4rpx rgba(0, 0, 0, 0.1);
+
+    &__img {
+      width: 340rpx;
+      height: 340rpx;
+      border-radius: 14rpx 14rpx 0 0;
+    }
+
+    &__title {
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      width: 340rpx;
+      margin: 14rpx auto;
+      padding: 0 14rpx;
+    }
+
+    &__info {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 14rpx;
+
+      &__point {
+        font-size: 33rpx;
+        font-weight: 500;
+        color: #FA230F;
+
+        &:after {
+          content: '健康分';
+          font-size: 25rpx;
+          color: #FA230F;
+        }
+      }
+
+      &__num {
+        padding: 6rpx 8rpx;
+        background: #FFEFED;
+        border-radius: 6rpx;
+        font-size: 21rpx;
+        color: #E02C1B;
+      }
+    }
+
+    &__btn {
+      width: 260rpx;
+      height: 60rpx;
+      margin: 20rpx auto 0 auto;
+      color: #fff;
+      font-size: 28rpx;
+      font-weight: 500;
+      border-radius: 34rpx;
+      background: #fd8d07;
+    }
+  }
 }
