--- a/miniprogram_npm/miniprogram-barrage/index.wxss
+++ b/miniprogram_npm/miniprogram-barrage/index.wxss
@@ -3,7 +3,6 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  z-index: 1000;
   pointer-events: auto;
 }
 
@@ -12,13 +11,14 @@
   position: relative;
   display: flex;
   align-items: center;
-  border-top: 1px solid #CCB24D;
+  border-top: 1px dashed #CCB24D;
   width: 100%;
 }
 
 .tunnel-tips {
   display: inline-block;
   margin-left: 10px;
+  color: #CCB24D;
 }
 
 .bullet-item {
@@ -35,11 +35,11 @@
   opacity: 0.6;
   padding: 0 10px;
   z-index: 1001;
-  
 }
 
 .bullet-item_img {
   max-height: 100%;
+  display: inline-block;
 }
 
 .bullet-item_text {
