--- a/pages/ranking/ranking.wxml
+++ b/pages/ranking/ranking.wxml
@@ -1,3 +1,3 @@
-<view class="container">
+<!-- <view class="container">
   <ff-canvas id="column-dom" canvas-id="column" opts="{{ opts }}"></ff-canvas>
-</view>
+</view> -->
