--- a/pages/personal/personal.scss
+++ b/pages/personal/personal.scss
@@ -1,3 +1,148 @@
 page {
+  background: #F8F8F8;
+}
+
+.header {
+  $rule: &;
+  position: relative;
+  width: 100%;
+  height: 517rpx;
+
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 517rpx;
+  }
+
+  &__user {
+    position: absolute;
+    top: 150rpx;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 156rpx;
+    padding: 0 46rpx;
+
+    @at-root #{$rule}__avater {
+      width: 156rpx;
+      height: 156rpx;
+      border-radius: 50%;
+    }
+
+    @at-root #{$rule}__info {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      margin: 0 0 0 30rpx;
+      color: #fff;
+
+      @at-root #{$rule}__nick {
+        font-size: 42rpx;
+      }
+
+      @at-root #{$rule}__label {
+        width: 164rpx;
+        height: 36rpx;
+        background: #19A0F4;
+        border-radius: 18rpx;
+        font-size: 21rpx;
+      }
+    }
+  }
+
+  &__title {
+    position: absolute;
+    bottom: 140rpx;
+    left: 80rpx;
+    display: flex;
+    align-items: center;
+    font-size: 25rpx;
+    color: #fff;
+
+    &__icon {
+      width: 26rpx;
+      height: 26rpx;
+      margin: 0 8rpx 0 0;
+    }
+  }
+
+  &__points {
+    position: absolute;
+    bottom: 80rpx;
+    left: 80rpx;
+    font-size: 42rpx;
+    font-weight: 500;
+    color: #fff;
+  }
+
+  &__exchange {
+    position: absolute;
+    bottom: 90rpx;
+    right: 40rpx;
+    width: 170rpx;
+    height: 60rpx;
+    font-size: 29rpx;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 31rpx;
+  }
+}
+
+.main {
+  $rule: &;
+  position: absolute;
+  top: 460rpx;
+  left: 25rpx;
+  width: 700rpx;
+  height: 700rpx;
   background: #fff;
+  border-radius: 14rpx;
+
+  &__wrap {
+    display: flex;
+    width: 606rpx;
+    height: 102rpx;
+    margin: 0 auto;
+    border-bottom: 1px solid #EDEDED;
+
+    @at-root #{$rule}__left {
+      display: flex;
+      align-items: center;
+      width: 50%;
+
+      @at-root #{$rule}__icon {
+        width: 34rpx;
+        height: 34rpx;
+      }
+
+      @at-root #{$rule}__title {
+        font-size: 29rpx;
+        color: #000;
+        margin: 0 0 0 25rpx;
+      }
+    }
+
+    @at-root #{$rule}__right {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      width: 50%;
+
+      @at-root #{$rule}__status {
+        color: #999;
+        font-size: 25rpx;
+      }
+
+      @at-root #{$rule}__arrow {
+        width: 20rpx;
+        height: 20rpx;
+        border: 3rpx solid #666;
+        transform: rotate(45deg);
+        border-left: 0;
+        border-bottom: 0;
+      }
+    }
+  }
 }
